Cleaned up Jupyter Notebook file

--- a/codebase_finalIteration_1.ipynb
+++ b/codebase_finalIteration_1.ipynb
@@ -243,18 +243,7 @@
     "\n",
     "cnn_model.add(Dense(units=train_generator.num_classes, activation='softmax'))\n",
     "\n",
-    "\n",
-    "\n",
-    "# try this\n",
-    "# A conv Layer kernel (5, 5), then a max pooling layer\n",
-    "# Another Conv Layer, then a max pooling layer\n",
-    "# Then Flatten.\n",
-    "# Then add the dense layer\n",
-    "# And drop out 40-50%\n",
-    "# Then the softmax output activation\n",
-    "# Compile!\n",
-    "\n",
-    "# Use Auto Encoders so input and output size are the same.\n"
+    "\n"
    ]
   },
   {
@@ -274,15 +263,7 @@
     "\n",
     "cnn_model.compile(optimizer=optimizer,\n",
     "                  loss='categorical_crossentropy',\n",
-    "                  metrics=['accuracy'])\n",
-    "\n",
-    "# import tensorflow as tf\n",
-    "\n",
-    "# # Initialising the optimizer\n",
-    "# optimizer = tf.keras.optimizers.RMSprop(learning_rate = 0.001)\n",
-    "\n",
-    "# # Compiling the model\n",
-    "# cnn_model.compile(loss = 'categorical_crossentropy', optimizer = optimizer, metrics = ['accuracy'])"
+    "                  metrics=['accuracy'])\n"
    ]
   },
   {
@@ -584,17 +565,7 @@
     }
    ],
    "source": [
-    "# # Getting the total number of samples\n",
-    "# n_train_samples = train_generator.samples\n",
-    "# n_test_samples = test_generator.samples\n",
     "\n",
-    "# # Calculate the steps per epoch\n",
-    "# steps_per_epoch = n_train_samples // train_generator.batch_size\n",
-    "# validation_steps = n_test_samples // test_generator.batch_size\n",
-    "\n",
-    "# # Ensuring both are atleast 1 to stop model from running out of data. \n",
-    "# steps_per_epoch = max(steps_per_epoch, 1)\n",
-    "# validation_steps = max(validation_steps, 1)\n",
     "\n",
     "# Using a learning rate scheduler\n",
     "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=5, min_lr=0.001)\n",
@@ -603,16 +574,7 @@
     "early_stopping = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "\n",
     "\n",
-    "# # Train the model\n",
-    "# history = cnn_model.fit(\n",
-    "#     train_generator,\n",
-    "#     steps_per_epoch=steps_per_epoch,\n",
-    "#     validation_data=test_generator,\n",
-    "#     validation_steps=validation_steps,\n",
-    "#     epochs=200,\n",
-    "#     callbacks=[reduce_lr, early_stopping]\n",
-    "# )\n",
-    "\n",
+    "# Train the model\n",
     "history = cnn_model.fit(\n",
     "    train_dataset,\n",
     "    steps_per_epoch=len(train_generator),\n",
@@ -646,11 +608,6 @@
     }
    ],
    "source": [
-    "# evaluation = cnn_model.evaluate(test_generator, \n",
-    "#                                 steps=test_generator.samples // test_generator.batch_size)\n",
-    "# print(f\"Test Loss: {evaluation[0]}\")\n",
-    "# print(f\"Test Accuracy: {evaluation[1]}\")\n",
-    "\n",
     "\n",
     "# Evaluate the model\n",
     "evaluation = cnn_model.evaluate(\n",
@@ -660,8 +617,7 @@
     ")\n",
     "\n",
     "print(f\"Test Loss: {evaluation[0]}\")\n",
-    "print(f\"Test Accuracy: {evaluation[1]}\")\n",
-    "\n"
+    "print(f\"Test Accuracy: {evaluation[1]}\")"
    ]
   },
   {
@@ -749,35 +705,6 @@
     }
    ],
    "source": [
-    "# # Getting the class labels\n",
-    "# class_labels = list(test_generator.class_indices.keys())\n",
-    "\n",
-    "\n",
-    "# # Getting predictions\n",
-    "# predictions = cnn_model.predict(X_batch)\n",
-    "# predicted_classes = np.argmax(predictions, axis=1)\n",
-    "# actual_classes = np.argmax(y_batch, axis=1)\n",
-    "\n",
-    "# # Defining grid dimensions\n",
-    "# L_grid = 9\n",
-    "# W_grid = 9\n",
-    "\n",
-    "# # Creating a figure with a grid of subplots\n",
-    "# fig, axes = plt.subplots(L_grid, W_grid, figsize=(25, 25))\n",
-    "# axes = axes.ravel()\n",
-    "\n",
-    "# # Plotting the images and their predictions\n",
-    "# for i in range (L_grid * W_grid):\n",
-    "#     index = np.random.randint(0, X_batch.shape[0])\n",
-    "#     axes[i].imshow(X_batch[index])\n",
-    "#     axes[i].set_title(f\"Actual: {class_labels[actual_classes[index]]}\\nPredicted: {class_labels[predicted_classes[index]]}\")\n",
-    "#     axes[i].axis('off')\n",
-    "\n",
-    "\n",
-    "# plt.subplots_adjust(hspace=0.5)\n",
-    "# plt.show()\n",
-    "\n",
-    "\n",
     "\n",
     "# Assuming the test_generator has been defined and the model has been trained\n",
     "# Get a batch of images and labels from the test dataset\n",
